--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
     "framer-motion": "^12.24.11",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.562.0",
+    "posthog-js": "^1.318.1",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-leaflet": "^5.0.0",
