Add .env.example files with all required environment variables
- Add backend/.env.example with Supabase, OAuth, and session config
- Update frontend/.env.example with API URL and better documentation
- Documents all environment variables needed for development and production

--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,4 +1,12 @@
-# PostHog Analytics
-# Get your keys from https://posthog.com
-VITE_PUBLIC_POSTHOG_KEY=your_posthog_project_api_key
+# TechJobs Frontend Environment Variables
+# Copy this file to .env and fill in your values
+
+# API Configuration
+# Leave empty or set to /api for production (uses relative URL)
+# For local development with separate backend:
+VITE_API_URL=http://localhost:3001
+
+# PostHog Analytics (Optional)
+# Get these from your PostHog project settings: https://app.posthog.com
+VITE_PUBLIC_POSTHOG_KEY=
 VITE_PUBLIC_POSTHOG_HOST=https://us.i.posthog.com
