Add PostgreSQL session persistence with connect-pg-simple
- Replace in-memory session store with PostgreSQL (Supabase)
- Add 'session' table to supabase-schema.sql with RLS policy
- Add connect-pg-simple and pg dependencies
- Update .env.example with DATABASE_URL/SUPABASE_DB_PASSWORD

Sessions now persist across server restarts and support horizontal scaling.

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -20,6 +20,12 @@ SUPABASE_SERVICE_KEY=your-service-role-key
 # Or use anon key for development (less privileged):
 # SUPABASE_ANON_KEY=your-anon-key
 
+# Database Connection (for session persistence)
+# Option 1: Full connection string (recommended)
+# DATABASE_URL=postgresql://postgres.[PROJECT_ID]:[PASSWORD]@aws-0-us-east-1.pooler.supabase.com:6543/postgres
+# Option 2: Just the password (will construct URL from SUPABASE_URL)
+SUPABASE_DB_PASSWORD=your-database-password
+
 # Google OAuth Configuration (REQUIRED for authentication)
 # Create credentials at: https://console.cloud.google.com/apis/credentials
 GOOGLE_CLIENT_ID=your-google-client-id.apps.googleusercontent.com
