--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,33 +1,26 @@
-# TechJobs Backend Environment Variables
-# Copy this file to .env and fill in your values
-
-# Server Configuration
-PORT=3001
-NODE_ENV=development
-
-# Frontend URL (for CORS and OAuth redirects)
-CORS_ORIGIN=http://localhost:5173
-FRONTEND_URL=http://localhost:5173
-
-# Session Configuration
-# IMPORTANT: Change this to a strong random string in production!
-SESSION_SECRET=your-session-secret-change-in-production
-
-# Supabase Configuration (REQUIRED)
-# Get these from your Supabase project settings: https://app.supabase.com
+# Supabase Configuration
+# Get these from: Supabase Dashboard > Settings > API
 SUPABASE_URL=https://your-project-id.supabase.co
 SUPABASE_SERVICE_KEY=your-service-role-key
-# Or use anon key for development (less privileged):
-# SUPABASE_ANON_KEY=your-anon-key
 
-# Database Connection (for session persistence)
-# Option 1: Full connection string (recommended)
-# DATABASE_URL=postgresql://postgres.[PROJECT_ID]:[PASSWORD]@aws-0-us-east-1.pooler.supabase.com:6543/postgres
-# Option 2: Just the password (will construct URL from SUPABASE_URL)
-SUPABASE_DB_PASSWORD=your-database-password
+# Database Connection
+# Get from: Supabase Dashboard > Settings > Database > Connection string (URI)
+# Use Session Pooler for IPv4 compatibility
+DATABASE_URL=postgresql://postgres.your-project-id:[YOUR-PASSWORD]@aws-0-region.pooler.supabase.com:5432/postgres
 
-# Google OAuth Configuration (REQUIRED for authentication)
-# Create credentials at: https://console.cloud.google.com/apis/credentials
-GOOGLE_CLIENT_ID=your-google-client-id.apps.googleusercontent.com
+# Session Secret (generate a random string)
+SESSION_SECRET=your-super-secret-session-key-change-in-production
+
+# Google OAuth
+# Get from: Google Cloud Console > APIs & Services > Credentials
+GOOGLE_CLIENT_ID=your-google-client-id
 GOOGLE_CLIENT_SECRET=your-google-client-secret
-GOOGLE_CALLBACK_URL=http://localhost:3001/auth/google/callback
+
+# CORS Origin (your frontend URL)
+CORS_ORIGIN=http://localhost:5173
+
+# Port (optional, defaults to 3001)
+PORT=3001
+
+# Node Environment
+NODE_ENV=development
