fix: Add env vars to .env.example and remove noisy production warning
- Document VITE_ADSENSE_* env vars in .env.example
- Remove console.warn in production (was logging on every render)

--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -10,3 +10,10 @@ VITE_API_URL=http://localhost:3001
 # Get these from your PostHog project settings: https://app.posthog.com
 VITE_PUBLIC_POSTHOG_KEY=
 VITE_PUBLIC_POSTHOG_HOST=https://us.i.posthog.com
+
+# Google AdSense (Optional)
+# Get these from your AdSense dashboard: https://adsense.google.com
+VITE_ADSENSE_CLIENT_ID=
+VITE_ADSENSE_SLOT_BANNER=
+VITE_ADSENSE_SLOT_SIDEBAR=
+VITE_ADSENSE_SLOT_INFEED=
