--- a/backend/package.json
+++ b/backend/package.json
@@ -16,11 +16,14 @@
   "license": "ISC",
   "dependencies": {
     "@supabase/supabase-js": "^2.45.0",
+    "axios": "^1.13.2",
+    "cheerio": "^1.1.2",
     "connect-pg-simple": "^10.0.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "express-session": "^1.18.2",
+    "node-cron": "^4.2.1",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
     "pg": "^8.16.3",
@@ -29,12 +32,14 @@
   "devDependencies": {
     "@babel/core": "^7.28.6",
     "@babel/preset-env": "^7.28.6",
+    "@types/cheerio": "^0.22.35",
     "@types/connect-pg-simple": "^7.0.3",
     "@types/cors": "^2.8.18",
     "@types/express": "^5.0.2",
     "@types/express-session": "^1.18.2",
     "@types/jest": "^30.0.0",
     "@types/node": "^25.0.6",
+    "@types/node-cron": "^3.0.11",
     "@types/passport": "^1.0.17",
     "@types/passport-google-oauth20": "^2.0.17",
     "@types/pg": "^8.16.0",
